working on html and css file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 <body>
     <div class="container">
         <h1>Discover hidden places in the world around you</h1>
-        <h3>Download Excursion(Coming soon!)</h3>
-    </div>
+        <a href=""><p>Download Excursion(Coming soon!)</p></a>
+        <div class="video-container">
+            <video autoplay="" muted="" loop>
+            <source src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"></div>
+            </video>
+            <h2>Your Personal Travel Guide</h2>
+            <h4>Excursion remenbers places you like,and recommends new points of interest around you</h4>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="">
+            <p>
+                <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png">
+                
+            </p>
+            <h2>Coming Soon for Iphone and Android </h2>
+            <a href=""><p>Download Excursion(Coming soon!)</p></a>
+            
+            <div class="footer">
+                <p>© Excursion</p>
+            </div>
+        </div>
 </body>
 </html>
